--- a/administrator/components/com_teamtimebpm/assets/templates/reportnotice_followed.html
+++ b/administrator/components/com_teamtimebpm/assets/templates/reportnotice_followed.html
@@ -3,40 +3,34 @@
 <div style="font-family: Arial, sans-serif; font-size: 14px;">
 
 	<div style="margin-bottom: 30px;">
-		Ваша задача:
-		<!-- BEGIN todorow -->
-		<!--<a href="{user_todo_url}">{user_todo_name}</a><br>-->
-	  {user_todo_name}<br>
-	  <!-- END todorow -->
+		Отслеживание процесса: {process_name}
 	</div>
 
 	<table style="width: 685px; border-color: #bad2ee; border-style: solid; border-width: 2px; border-collapse: collapse;">
 		<caption style="text-align: left; padding-bottom: 15px;">Текущий результат процесса:</caption>
-		<thead>
-			<tr>
-				<th colspan="2"
-						style="border-width: 1px; border-style: solid; border-color: #7da9e2; padding-top: 7px; padding-bottom: 7px; padding-right: 10px; padding-left: 10px; text-align: left; background-color: #e1edf5;">
-					{todo_name}
-				</th>
-			</tr>
-		</thead>
 		<tbody>
-
-			<!-- BEGIN row -->
-			<tr>
-				<td valign="top"
-						style="border-width: 1px; border-style: solid; border-color: #7da9e2; padding-bottom: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; font-size: 12px;">
-					{log_date}
+			<!-- BEGIN rowgroup -->
+			  <tr>
+				<td valign="top" colspan="2" style="border-width:1px;border-style:solid;border-color:#7da9e2;padding-top:7px;padding-bottom:7px;padding-right:10px;padding-left:10px;text-align:left;background-color:#e1edf5;font-weight:bolder;">
+				  {todo_name}
 				</td>
-				<td valign="top"
-						style="border-width: 1px; border-style: solid; border-color: #7da9e2; padding-bottom: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; font-size: 12px;">
-					<p style="margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0;">
-						{log_report}
-					</p>
 				</td>
-			</tr>
-			<!-- END row -->
-
+			  </tr>
+			  <!-- BEGIN row -->
+			  <tr>
+				  <td valign="top"
+						  style="border-width: 1px; border-style: solid; border-color: #7da9e2; padding-bottom: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; font-size: 12px;">
+					  {log_date}
+				  </td>
+				  <td valign="top"
+						  style="border-width: 1px; border-style: solid; border-color: #7da9e2; padding-bottom: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; font-size: 12px;">
+					  <p style="margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0;">
+						  {log_report}
+					  </p>
+				  </td>
+			  </tr>
+			  <!-- END row -->
+			<!-- END rowgroup -->
 		</tbody>
 		<tfoot>
 			<tr>
