Process link style fixed.

--- a/media/com_teamtimecalendar/assets/css/calendar.css
+++ b/media/com_teamtimecalendar/assets/css/calendar.css
@@ -688,8 +688,8 @@
 }
 
 div.calendar-process-icon {
-	/* float:right; */
-    position: absolute;
+	float:right;
+    /*position: absolute;*/
     bottom: 40%;
     right: 0;
 }
