--- a/administrator/components/com_teamtimebpm/assets/templates/reportnotice_followed.html
+++ b/administrator/components/com_teamtimebpm/assets/templates/reportnotice_followed.html
@@ -11,7 +11,8 @@
 			<!-- BEGIN rowgroup -->
 			  <tr>
 				<td valign="top" colspan="2" style="border-width:1px;border-style:solid;border-color:#7da9e2;padding-top:7px;padding-bottom:7px;padding-right:10px;padding-left:10px;text-align:left;background-color:#e1edf5;font-weight:bolder;">
-				  {todo_name} <br /><sup style="color: grey;">{todo_process_name}</sup>
+				  {todo_name}
+					<!--  IT WORKS BUT NOT NEEDED: <br /><sup style="color: grey;">{todo_process_name}</sup>-->
 				</td>
 				</td>
 			  </tr>
@@ -19,7 +20,7 @@
 			  <tr>
 				  <td valign="top"
 						  style="border-width: 1px; border-style: solid; border-color: #7da9e2; padding-bottom: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; font-size: 12px;">
-					  {log_date}<br /><span style="display: block; float: right; background: #924848; color: #fff; text-align: right; font-family: Arial, sans-serif; font-size: 9px; padding: 2px 2px; margin-top: 5px; border: 1px solid #333;">{log_duration}</span>
+					  {log_date}<br /><span style="display: block; float: right; background: #e1edf5; color: #999999; text-align: right; font-family: Arial, sans-serif; font-size: 9px; padding: 2px 2px; margin-top: 5px; border: 1px solid #b2b2b2;">{log_duration}</span>
 				  </td>
 				  <td valign="top"
 						  style="border-width: 1px; border-style: solid; border-color: #7da9e2; padding-bottom: 10px; padding-top: 10px; padding-right: 10px; padding-left: 10px; font-size: 12px;">
@@ -33,10 +34,14 @@
 		</tbody>
 		<tfoot>
 			<tr>
+<!-- It work's but not needed.
+
 				<td style="border-width: 1px; border-style: solid; border-color: #7da9e2; font-size: 11px; text-align: right;	color: #868686;	background-color: #e1edf5;	padding-top: 2px; padding-right: 7px; padding-bottom: 2px; padding-left: 0;">
 					{log_total_hours}
 				</td>
-				<td style="border-width: 1px; border-style: solid; border-color: #7da9e2; font-size: 11px; text-align: right;	color: #868686;	background-color: #e1edf5;	padding-top: 2px; padding-right: 7px; padding-bottom: 2px; padding-left: 0;">
+
+-->
+				<td colspan="2" style="border-width: 1px; border-style: solid; border-color: #7da9e2; font-size: 11px; text-align: right;	color: #868686;	background-color: #e1edf5;	padding-top: 2px; padding-right: 7px; padding-bottom: 2px; padding-left: 0;">
 					Сотрудник: {current_user_name}
 				</td>
 			</tr>
