Report "Followed process" was simplidied.

--- a/administrator/components/com_teamtimebpm/assets/templates/reportnotice_followed.html
+++ b/administrator/components/com_teamtimebpm/assets/templates/reportnotice_followed.html
@@ -34,14 +34,10 @@
 		</tbody>
 		<tfoot>
 			<tr>
-<!-- It work's but not needed.
-
 				<td style="border-width: 1px; border-style: solid; border-color: #7da9e2; font-size: 11px; text-align: right;	color: #868686;	background-color: #e1edf5;	padding-top: 2px; padding-right: 7px; padding-bottom: 2px; padding-left: 0;">
 					{log_total_hours}
 				</td>
-
--->
-				<td colspan="2" style="border-width: 1px; border-style: solid; border-color: #7da9e2; font-size: 11px; text-align: right;	color: #868686;	background-color: #e1edf5;	padding-top: 2px; padding-right: 7px; padding-bottom: 2px; padding-left: 0;">
+				<td style="border-width: 1px; border-style: solid; border-color: #7da9e2; font-size: 11px; text-align: right;	color: #868686;	background-color: #e1edf5;	padding-top: 2px; padding-right: 7px; padding-bottom: 2px; padding-left: 0;">
 					Сотрудник: {current_user_name}
 				</td>
 			</tr>
